--- a/index.html
+++ b/index.html
@@ -142,8 +142,8 @@ body {
   <section class="hero">
 
     <!-- صور الزوايا -->
-    <img src="left.png" class="corner-img left" alt="">
-    <img src="right.png" class="corner-img right" alt="">
+    <img src="خلفيه.png" class="corner-img left" alt="">
+    <img src="المدير.png" class="corner-img right" alt="">
 
     <h3 class="subtitle">🛒 متجر للخضار والفواكه</h3>
     <h1 class="title">أسواق دير العسل للخضار والفواكه</h1>
