--- a/index.html
+++ b/index.html
@@ -142,20 +142,20 @@ body {
   <section class="hero">
 
     <!-- صور الزوايا -->
-    <img src="خلفيه.png" class="corner-img left" alt="">
-    <img src="المدير.png" class="corner-img right" alt="">
+    <img src="خلفيه.PNG" class="corner-img left" alt="">
+    <img src="المدير.PNG" class="corner-img right" alt="">
 
     <h3 class="subtitle">🛒 متجر للخضار والفواكه</h3>
     <h1 class="title">أسواق دير العسل للخضار والفواكه</h1>
 
-    <div class="features">
+    
+  </section>
+<div class="features">
       <span>💻 موقع احترافي</span>
       <span>⚙️ لوحة تحكم</span>
       <span>🚚 توصيل</span>
       <span>💵 دفع عند الاستلام</span>
     </div>
-
-  </section>
 
   <!-- الفاصل الأخضر -->
   <div class="divider"></div>
