--- a/index.html
+++ b/index.html
@@ -133,6 +133,38 @@ body {
     gap: 15px;
   }
 }
+    .corner-img.veggies {
+  width: 220px;
+  top: 120px; /* تنزل باتجاه التموج */
+  left: 30px;
+  border-radius: 50%;
+  z-index: 5;
+}
+.profile-wrapper {
+  position: absolute;
+  top: 40px;
+  right: 30px;
+  width: 200px;
+  height: 200px;
+  border-radius: 50%;
+  background: radial-gradient(
+    circle at top left,
+    #6fd26f,
+    #2fbf71
+  );
+  padding: 8px;
+  z-index: 6;
+}
+
+/* الصورة نفسها */
+.profile-img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 50%;
+  background: white;
+}
+
 
   </style>
 </head>
@@ -142,8 +174,14 @@ body {
   <section class="hero">
 
     <!-- صور الزوايا -->
-    <img src="images/خلفيه.png" class="corner-img left" alt="">
-    <img src="images/المدير.png" class="corner-img right" alt="">
+ <!-- صورة الخضار -->
+<img src="images/الخلفيه.png" class="corner-img left veggies" alt="">
+
+<!-- صورة الشخص -->
+<div class="profile-wrapper">
+  <img src="images/المدير.png" class="profile-img" alt="">
+</div>
+
 
     <h3 class="subtitle">🛒 متجر للخضار والفواكه</h3>
     <h1 class="title">أسواق دير العسل للخضار والفواكه</h1>
