--- a/index.html
+++ b/index.html
@@ -165,6 +165,28 @@ body {
   background: white;
 }
 
+.hero {
+  background: linear-gradient(
+    to bottom,
+    #0b5f87 0%,
+    #0b5f87 45%,
+    #1e9c6c 70%,
+    #2fbf71 100%
+  );
+}
+@media (max-width: 600px) {
+  .corner-img.veggies {
+    width: 140px;
+    top: 160px;
+  }
+
+  .profile-wrapper {
+    width: 130px;
+    height: 130px;
+    top: 20px;
+    right: 15px;
+  }
+}
 
   </style>
 </head>
