--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@ body {
 
 <!-- صورة الشخص -->
 <div class="profile-wrapper">
-  <img src="images/المدير.png" class="profile-img" alt="">
+  <img src="images/الديرم.png" class="profile-img" alt="">
 </div>
 
 
