--- a/index.html
+++ b/index.html
@@ -83,11 +83,6 @@ body {
   font-size: 18px;
 }
 
-/* الفاصل الأخضر */
-.divider {
-  height: 12px;
-  background: #1f7a1f;
-}
 
 /* محتوى الصفحة */
 .content {
@@ -163,8 +158,10 @@ body {
   border-radius: 50%;
   object-fit: cover;
   background: #fff;
-  z-index: 7;
+  position: relative;
+  z-index: 2;
 }
+
 
 .hero {
   background: linear-gradient(
@@ -175,11 +172,21 @@ body {
     #2fbf71 100%
   );
 }
-@media (max-width: 600px) {
-  .corner-img.veggies {
-    width: 140px;
-    top: 160px;
+
+  @media (max-width: 600px) {
+  .profile-glow {
+    width: 130px;
+    height: 130px;
+    top: 20px;
+    right: 15px;
   }
+
+  .profile-img {
+    width: 95px;
+    height: 95px;
+  }
+}
+
 
   .profile-wrapper {
     width: 130px;
@@ -198,6 +205,8 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  z-index: 6;
+}
 
   /* التوهج */
   background: radial-gradient(
@@ -210,6 +219,22 @@ body {
 
   filter: blur(2px);
   z-index: 6;
+}
+.glow-bg {
+  position: absolute;
+  inset: 0;
+  border-radius: 50%;
+
+  background: radial-gradient(
+    circle,
+    rgba(111, 210, 111, 0.5) 0%,
+    rgba(111, 210, 111, 0.35) 40%,
+    rgba(111, 210, 111, 0.15) 65%,
+    rgba(111, 210, 111, 0.0) 80%
+  );
+
+  filter: blur(18px);
+  z-index: 1;
 }
 
   </style>
