--- a/index.html
+++ b/index.html
@@ -128,13 +128,14 @@ body {
     gap: 15px;
   }
 }
-    .corner-img.veggies {
+   .corner-img.veggies {
   width: 220px;
-  top: 120px; /* تنزل باتجاه التموج */
+  top: 120px;
   left: 30px;
-  border-radius: 50%;
+  border-radius: 0; /* جعل الصورة بدون أي تقويس */
   z-index: 5;
 }
+
 .profile-wrapper {
   position: absolute;
   top: 40px;
