--- a/index.html
+++ b/index.html
@@ -128,13 +128,14 @@ body {
     gap: 15px;
   }
 }
-   .corner-img.veggies {
-  width: 220px;
+ .corner-img.veggies {
+  width: 300px;  /* الحجم اللي كبرناه قبلًا */
   top: 120px;
-  left: 30px;
-  border-radius: 0; /* جعل الصورة بدون أي تقويس */
+  right: 30px;    /* بدل left: 30px; */
+  border-radius: 0; /* بدون إطار دائري */
   z-index: 5;
 }
+
 
 .profile-wrapper {
   position: absolute;
