--- a/index.html
+++ b/index.html
@@ -128,10 +128,10 @@ body {
     gap: 15px;
   }
 }
- .corner-img.veggies {
-  width: 300px;  /* الحجم اللي كبرناه قبلًا */
+.corner-img.veggies {
+  width: 400px;  /* تكبير الصورة أكثر */
   top: 120px;
-  right: 30px;    /* بدل left: 30px; */
+  left: 30px;    /* على اليسار */
   border-radius: 0; /* بدون إطار دائري */
   z-index: 5;
 }
