--- a/index.html
+++ b/index.html
@@ -129,12 +129,16 @@ body {
   }
 }
 .corner-img.veggies {
-  width: 400px;      /* الحجم الكبير */
-  top: 20px;         /* فوق أكثر لتكون قريبة من أعلى الصفحة */
-  left: 30px;        /* على اليسار */
-  border-radius: 0;  /* بدون إطار دائري */
-  position: absolute; 
-  z-index: 100;      /* أعلى من أي عنصر آخر */
+  width: 400px;          /* الحجم الكبير */
+  top: 20px;             /* قريبة من أعلى الصفحة */
+  left: 0;               /* إلى أقصى يسار الصفحة */
+  border-radius: 0;      /* بدون زوايا دائرية */
+  position: absolute;
+  z-index: 100;
+}
+body {
+  margin: 0;
+  padding: 0;
 }
 
 
