--- a/index.html
+++ b/index.html
@@ -117,11 +117,54 @@ body {
 }
 
 /* تحسين للموبايل */
-@media (max-width: 600px) {
-  .corner-img {
-    width: 80px;
-    opacity: 0.9;
+/* إصلاح جذري لتداخل الهيدر على الهاتف */
+@media (max-width: 768px) {
+
+  .hero {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-top: 25px !important;
+    min-height: auto;
   }
+
+  /* الخضار */
+  .corner-img.veggies {
+    position: relative;
+    width: 200px;
+    left: 0;
+    top: 0;
+    margin-bottom: 15px;
+  }
+
+  /* صورة المدير */
+  .profile-glow.right {
+    position: relative;
+    top: 0;
+    right: 0;
+    margin-bottom: 15px;
+    width: 140px;
+    height: 140px;
+  }
+
+  .profile-img {
+    width: 120px;
+    height: 120px;
+  }
+
+  /* النصوص */
+  .subtitle, .title {
+    position: relative;
+    z-index: 2;
+    text-align: center;
+  }
+
+  /* منع أي عناصر عائمة */
+  .corner-img,
+  .profile-glow {
+    float: none;
+  }
+}
 
   .features {
     font-size: 16px;
@@ -296,7 +339,9 @@ body {
   font-size: 20px;
   font-weight: 700;
   color: #083d2b;
-  animation: scrollText 18s linear infinite;
+animation: scrollText 5s linear infinite;
+
+
 }
 
 /* الحركة */
