--- a/index.html
+++ b/index.html
@@ -373,6 +373,7 @@ animation: scrollText 5s linear infinite;
 <div class="profile-glow right">
   <div class="glow-bg"></div>
   <img src="images/المدير.png" class="profile-img" alt="">
+  بادارة: السيد ضياء- الدين ابراهيم بني عامر 
 </div>
 
 
@@ -380,14 +381,15 @@ animation: scrollText 5s linear infinite;
     <h3 class="subtitle">🛒 متجر للخضار والفواكه</h3>
     <h1 class="title">أسواق دير العسل للخضار والفواكه</h1>
 
+
+  </section>
+  
     <!-- شريط إعلان متحرك -->
 <div class="promo-bar">
   <div class="promo-text">
-    🎉 بمناسبة إطلاق الموقع — التوصيل مجاني لمدة 3 أيام 🎉 &nbsp; 🎉 بمناسبة إطلاق الموقع — التوصيل مجاني لمدة 3 أيام 🎉
+    🎉 بمناسبة إطلاق الموقع — التوصيل مجاني لمدة 3 أيام 🎉 &nbsp; 🎉 بمناسبة إطلاق الموقع — التوصيل مجاني لمدة 3 أيام 🎉 &nbsp; 🎉 عروض وخصومات لاتنتهي🎉 &nbsp; 🎉 بفقط لدى اسواق دير العسل  🎉
   </div>
 </div>
-
-  </section>
 <div class="features">
       <span>💻 موقع احترافي</span>
       <span>⚙️ لوحة تحكم</span>
