--- a/index.html
+++ b/index.html
@@ -42,16 +42,7 @@
   font-family: "Arial", sans-serif;
 }
 
-body {
-  background: #0b5f87;
-  color: white;
-}
 
-/* القسم العلوي */
-.hero {
-  position: relative;
-  text-align: center;
-  padding: 80px 20px 60px;
 
   /* التدرج */
   background: linear-gradient(
@@ -74,14 +65,6 @@ body {
   margin-bottom: 25px;
 }
 
-/* المزايا */
-.features {
-  display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
-  gap: 25px;
-  font-size: 18px;
-}
 
 
 /* محتوى الصفحة */
@@ -292,62 +275,72 @@ body {
   );
   filter: blur(18px);
 }
+    .manager-name {
+  text-align: center;
+  margin-top: 10px;
+  font-size: 15px;
+  color: #eaffea;
+}
+
 /* منع التداخل في الموبايل */
 /* ====== Mobile Final Fix ====== */
+/* ===== Mobile Fix 100% ===== */
 @media (max-width: 768px) {
 
-  /* تقليل ارتفاع الهيدر */
-  .hero {
-    padding-top: 70px !important;
-    padding-bottom: 40px !important;
-    min-height: 260px;
-    position: relative;
-    overflow: hidden;
+  body {
+    overflow-x: hidden;
   }
 
-  /* صورة الخضار – أقصى اليسار على حد الفاصل */
+  .hero {
+    padding: 90px 15px 40px;
+    text-align: center;
+    position: relative;
+  }
+
+  /* صورة الخضار */
   .corner-img.veggies {
+    width: 140px;
     position: absolute;
-    width: 160px;
+    bottom: -20px;
     left: -20px;
-    bottom: -15px;   /* على خط الفاصل الأخضر */
-    top: auto;
+    z-index: 3;
+  }
+
+  /* صورة المدير */
+  .profile-glow.right {
+    width: 100px;
+    height: 100px;
+    top: 15px;
+    right: 10px;
+    position: absolute;
     z-index: 5;
   }
 
-  /* صورة المدير – أعلى يمين الشاشة */
-  .profile-glow.right {
-    position: absolute;
-    top: 15px;
-    right: 10px;
-    width: 110px;
-    height: 110px;
-    z-index: 10;
-  }
-
   .profile-img {
-    width: 95px;
-    height: 95px;
+    width: 85px;
+    height: 85px;
   }
 
-  /* النصوص بالمنتصف بدون تداخل */
-  .subtitle,
-  .title {
-    position: relative;
-    z-index: 8;
-    max-width: 70%;
-    margin-left: auto;
-    margin-right: auto;
-    text-align: center;
-    line-height: 1.3;
+  /* العناوين */
+  .subtitle {
+    font-size: 15px;
+    margin-bottom: 8px;
   }
 
   .title {
     font-size: 22px;
+    line-height: 1.3;
   }
 
-  .subtitle {
-    font-size: 15px;
+  .manager-name {
+    font-size: 13px;
+    margin-top: 6px;
+  }
+
+  .features {
+    font-size: 14px;
+    gap: 10px;
+    padding: 15px;
   }
 }
 
@@ -402,8 +395,11 @@ animation: scrollText 10s linear infinite;
 <div class="profile-glow right">
   <div class="glow-bg"></div>
   <img src="images/المدير.png" class="profile-img" alt="">
-  بادارة: السيد ضياء- الدين ابراهيم بني عامر 
 </div>
+
+<p class="manager-name">
+  بإدارة: السيد ضياء الدين إبراهيم بني عامر
+</p>
 
 
 
