--- a/index.html
+++ b/index.html
@@ -124,30 +124,25 @@
   text-align: center;
   z-index: 4;
 }
-
 .profile-img {
-  width: 140px;
-  height: 140px;
+  width: 150px;
+  height: 150px;
   border-radius: 50%;
   object-fit: cover;
-  background: #fff;
-  position: relative;
-  z-index: 3;
+
+  background: transparent;        /* ⬅️ يلغي الأبيض */
+  mix-blend-mode: multiply;       /* ⬅️ يدمج مع خلفية الموقع */
 }
 
+
 .glow-bg {
-  position: absolute;
-  inset: -15px;
-  border-radius: 50%;
   background: radial-gradient(
     circle,
-    rgba(111,210,111,.5) 0%,
-    rgba(111,210,111,.25) 45%,
-    rgba(111,210,111,0) 75%
+    rgba(111, 210, 111, 0.5) 0%,
+    rgba(111, 210, 111, 0.0) 75%
   );
-  filter: blur(12px);
-  z-index: 1;
 }
+
 
 /* اسم المدير */
 .manager-name {
