--- a/index.html
+++ b/index.html
@@ -298,6 +298,71 @@ animation: scrollText 1015s linear infinite;
     color: #eaffea;
   }
 }
+/* ===== FIX MOBILE LAYOUT ONCE AND FOR ALL ===== */
+@media (max-width: 768px) {
+
+  * {
+    position: static !important;
+  }
+
+  body {
+    overflow-x: hidden;
+  }
+
+  .hero {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 25px 15px 40px;
+    text-align: center;
+  }
+
+  /* صورة المدير */
+  .profile-glow,
+  .profile-wrapper,
+  .manager-mobile {
+    order: 1;
+    margin-bottom: 10px;
+  }
+
+  .profile-img {
+    width: 120px;
+    height: 120px;
+  }
+
+  /* اسم المدير */
+  .manager-name {
+    order: 2;
+    margin-bottom: 10px;
+    font-size: 14px;
+  }
+
+  /* العناوين */
+  .subtitle {
+    order: 3;
+    font-size: 16px;
+    margin-top: 5px;
+  }
+
+  .title {
+    order: 4;
+    font-size: 22px;
+    max-width: 95%;
+    line-height: 1.35;
+  }
+
+  /* صورة الخضار */
+  .corner-img.veggies {
+    order: 5;
+    width: 160px;
+    margin-top: 15px;
+  }
+
+  /* شريط الإعلان */
+  .promo-bar {
+    margin-top: 10px;
+  }
+}
 
 
   </style>
