--- a/index.html
+++ b/index.html
@@ -124,25 +124,30 @@
   text-align: center;
   z-index: 4;
 }
+
 .profile-img {
-  width: 150px;
-  height: 150px;
+  width: 140px;
+  height: 140px;
   border-radius: 50%;
   object-fit: cover;
-
-  background: transparent;        /* ⬅️ يلغي الأبيض */
-  mix-blend-mode: multiply;       /* ⬅️ يدمج مع خلفية الموقع */
+  background: #fff;
+  position: relative;
+  z-index: 3;
 }
-
 
 .glow-bg {
+  position: absolute;
+  inset: -15px;
+  border-radius: 50%;
   background: radial-gradient(
     circle,
-    rgba(111, 210, 111, 0.5) 0%,
-    rgba(111, 210, 111, 0.0) 75%
+    rgba(111,210,111,.5) 0%,
+    rgba(111,210,111,.25) 45%,
+    rgba(111,210,111,0) 75%
   );
+  filter: blur(12px);
+  z-index: 1;
 }
-
 
 /* اسم المدير */
 .manager-name {
@@ -150,6 +155,7 @@
   font-size: 14px;
   color: #eaffea;
 }
+
 
 
 /* شريط الإعلان المتحرك */
@@ -350,19 +356,17 @@ animation: scrollText 1015s linear infinite;
   <img src="images/خلفيه.png" class="corner-img veggies" alt="خضار">
 
   <!-- صورة الشخص -->
-  
-  <div class="manager-mobile">
-  <div class="avatar-glow">
-    <img src="images/المدير.png" alt="المدير">
+  <div class="profile-wrapper">
+    <div class="glow-bg"></div>
+    <img src="images/المدير.png" class="profile-img" alt="المدير">
+    <p class="manager-name">بإدارة: السيد ضياء الدين إبراهيم بني عامر</p>
   </div>
-  <span>بإدارة: السيد ضياء الدين إبراهيم بني عامر</span>
-</div>
-
 
   <h3 class="subtitle">🛒 متجر للخضار والفواكه</h3>
   <h1 class="title">أسواق دير العسل للخضار والفواكه</h1>
 
 </section>
+
 
   
     <!-- شريط إعلان متحرك -->
