--- a/index.html
+++ b/index.html
@@ -344,6 +344,60 @@ animation: scrollText 1015s linear infinite;
   }
 }
 
+@media (max-width: 768px) {
+
+  body {
+    overflow-x: hidden;
+  }
+
+  /* تظل صورة الخضار في نفس مكانها وحجمها */
+  .corner-img.veggies {
+    position: absolute !important;
+    top: 0 !important;
+    left: 0 !important;
+    width: 260px !important; /* نفس حجم اللابتوب */
+    z-index: 2 !important;
+  }
+
+  /* تظل صورة المدير في نفس مكانها وحجمها */
+  .profile-wrapper {
+    position: absolute !important;
+    top: 20px !important;
+    right: 20px !important;
+    width: 180px !important; /* نفس حجم اللابتوب */
+    height: auto !important;
+    z-index: 4 !important;
+  }
+
+  .profile-img {
+    width: 140px !important;
+    height: 140px !important;
+  }
+
+  .glow-bg {
+    inset: -15px;
+  }
+
+  /* نصوص العنوان */
+  .subtitle {
+    font-size: clamp(18px, 3vw, 26px);
+  }
+
+  .title {
+    font-size: clamp(26px, 4vw, 42px);
+  }
+
+  /* شريط الإعلان المتحرك */
+  .promo-bar {
+    margin-top: 10px;
+  }
+
+  /* باقي العناصر مثل الزر */
+  .cta {
+    padding: 18px 50px;
+    font-size: 22px;
+  }
+}
 
   </style>
 </head>
