--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
   font-size: 20px;
   font-weight: 700;
   color: #083d2b;
-animation: scrollText 1015s linear infinite;
+animation: scrollText 15s linear infinite;
 
 
 }
@@ -343,14 +343,13 @@ animation: scrollText 1015s linear infinite;
     margin-top: 10px;
   }
 }
-
 @media (max-width: 768px) {
 
   body {
     overflow-x: hidden;
   }
 
-  /* تظل صورة الخضار في نفس مكانها وحجمها */
+  /* صورة الخضار تبقى في نفس مكانها وحجمها */
   .corner-img.veggies {
     position: absolute !important;
     top: 0 !important;
@@ -359,7 +358,7 @@ animation: scrollText 1015s linear infinite;
     z-index: 2 !important;
   }
 
-  /* تظل صورة المدير في نفس مكانها وحجمها */
+  /* صورة المدير تبقى في نفس مكانها وحجمها */
   .profile-wrapper {
     position: absolute !important;
     top: 20px !important;
@@ -381,23 +380,6 @@ animation: scrollText 1015s linear infinite;
   /* نصوص العنوان */
   .subtitle {
     font-size: clamp(18px, 3vw, 26px);
-  }
-
-  .title {
-    font-size: clamp(26px, 4vw, 42px);
-  }
-
-  /* شريط الإعلان المتحرك */
-  .promo-bar {
-    margin-top: 10px;
-  }
-
-  /* باقي العناصر مثل الزر */
-  .cta {
-    padding: 18px 50px;
-    font-size: 22px;
-  }
-}
 
   </style>
 </head>
